--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,17 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# database
+/prisma/dev.db
+/prisma/dev.db-journal
+
+# neon temporary files
+neon-*.log
+
+# documentation (keep docs/ folder)
+!docs/
 
 # vercel
 .vercel
